--- a/project/src/main/res/layout/widget_car_filter.xml
+++ b/project/src/main/res/layout/widget_car_filter.xml
@@ -11,184 +11,242 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+        android:layout_height="match_parent" >
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp">
+            android:scrollbars="none">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="@string/options"
-                android:textColor="@color/cars_primary_color" />
-
-            <android.support.v7.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="1dp">
+                android:orientation="vertical"
+                android:paddingBottom="16dp"
+                android:paddingTop="16dp">
 
-                <LinearLayout
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="@string/options"
+                    android:textColor="@color/cars_primary_color" />
+
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="3dp"
+                    app:cardElevation="1dp">
 
-                    <Button
-                        android:id="@+id/transmission_filter_automatic"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/transmission_filter_automatic"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/cars_sort_button_selector"
+                            android:text="@string/car_filter_automatic"
+                            android:textAllCaps="false"
+                            android:textColor="@drawable/cars_sort_button_text_selector" />
+
+                        <View
+                            android:layout_width="1px"
+                            android:layout_height="match_parent"
+                            android:background="@color/divider_grey" />
+
+                        <Button
+                            android:id="@+id/transmission_filter_manual"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/cars_sort_button_selector"
+                            android:text="@string/car_filter_manual"
+                            android:textAllCaps="false"
+                            android:textColor="@drawable/cars_sort_button_text_selector" />
+
+                        <View
+                            android:layout_width="1px"
+                            android:layout_height="match_parent"
+                            android:background="@color/divider_grey" />
+
+                        <Button
+                            android:id="@+id/transmission_filter_all"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/cars_sort_button_selector"
+                            android:text="@string/car_filter_all"
+                            android:textAllCaps="false"
+                            android:textColor="@drawable/cars_sort_button_text_selector" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <LinearLayout
+                    android:id="@+id/ac_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:orientation="horizontal"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingTop="5dp">
+
+                    <TextView
+                        android:id="@+id/ac_filter_text"
                         android:layout_width="0dp"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/cars_sort_button_selector"
-                        android:text="@string/car_filter_automatic"
-                        android:textAllCaps="false"
-                        android:textColor="@drawable/cars_sort_button_text_selector" />
+                        android:text="@string/car_filter_checkbox_air_conditioning" />
 
-                    <View
-                        android:layout_width="1px"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_grey" />
-
-                    <Button
-                        android:id="@+id/transmission_filter_manual"
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/cars_sort_button_selector"
-                        android:text="@string/car_filter_manual"
-                        android:textAllCaps="false"
-                        android:textColor="@drawable/cars_sort_button_text_selector" />
-
-                    <View
-                        android:layout_width="1px"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_grey" />
-
-                    <Button
-                        android:id="@+id/transmission_filter_all"
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/cars_sort_button_selector"
-                        android:text="@string/car_filter_all"
-                        android:textAllCaps="false"
-                        android:textColor="@drawable/cars_sort_button_text_selector" />
+                    <CheckBox
+                        android:id="@+id/ac_filter_checkbox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/cars_primary_color" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
 
-            <LinearLayout
-                android:id="@+id/ac_filter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:orientation="horizontal"
-                android:paddingBottom="5dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingTop="5dp">
+                <LinearLayout
+                    android:id="@+id/unlimited_mileage_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:orientation="horizontal"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingTop="5dp">
+
+                    <TextView
+                        android:id="@+id/unlimited_mileage_filter_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:text="@string/car_filter_checkbox_unlimited_mileage" />
+
+                    <CheckBox
+                        android:id="@+id/unlimited_mileage_filter_checkbox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/cars_primary_color" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@color/divider_grey" />
 
                 <TextView
-                    android:id="@+id/ac_filter_text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="@string/car_filter_checkbox_air_conditioning" />
-
-                <CheckBox
-                    android:id="@+id/ac_filter_checkbox"
+                    android:id="@+id/car_type_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="@string/car_types"
                     android:textColor="@color/cars_primary_color" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/unlimited_mileage_filter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:orientation="horizontal"
-                android:paddingBottom="5dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingTop="5dp">
+                <LinearLayout
+                    android:id="@+id/filter_categories"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" />
+
+                <View
+                    android:id="@+id/filter_categories_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@color/divider_grey" />
 
                 <TextView
-                    android:id="@+id/unlimited_mileage_filter_text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="@string/car_filter_checkbox_unlimited_mileage" />
-
-                <CheckBox
-                    android:id="@+id/unlimited_mileage_filter_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="@string/car_vendors"
                     android:textColor="@color/cars_primary_color" />
+
+                <LinearLayout
+                    android:id="@+id/filter_suppliers"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp" />
+
             </LinearLayout>
+        </ScrollView>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="15dp"
-                android:background="@color/divider_grey" />
-
-            <TextView
-                android:id="@+id/car_type_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="@string/car_types"
-                android:textColor="@color/cars_primary_color" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/dynamic_feedback_container"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_gravity="bottom"
+            android:layout_margin="16dp"
+            android:background="#ffffff"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="15dp">
 
             <LinearLayout
-                android:id="@+id/filter_categories"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical" />
+                android:orientation="horizontal" >
 
-            <View
-                android:id="@+id/filter_categories_divider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="15dp"
-                android:background="@color/divider_grey" />
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/dynamic_feedback_counter"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:paddingLeft="20dp"
+                    android:textColor="#939393"
+                    android:textSize="13sp"
+                    app:textStyle="medium" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="@string/car_vendors"
-                android:textColor="@color/cars_primary_color" />
+                <View
+                    android:layout_width="1px"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="6dp"
+                    android:layout_marginTop="6dp"
+                    android:background="#979797" />
 
-            <LinearLayout
-                android:id="@+id/filter_suppliers"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" />
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/dynamic_feedback_clear_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:gravity="center"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:textColor="@color/cars_primary_color"
+                    android:textSize="13sp"
+                    android:text="@string/clear_filters"
+                    app:textStyle="normal" />
 
-        </LinearLayout>
-    </ScrollView>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </FrameLayout>
 </merge>
