--- a/project/src/main/res/layout/section_display_flight_trip_price_bar.xml
+++ b/project/src/main/res/layout/section_display_flight_trip_price_bar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.SectionFlightTrip xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:mobiata="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -12,61 +12,65 @@
         android:layout_marginBottom="10dp"
         android:background="#66000000" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/cd_flight_selection_cost_summary" >
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/cd_flight_selection_cost_summary"
+        android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/price_description_container"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/total_price_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/total_price_label"
+                android:layout_gravity="center_vertical"
+                android:ellipsize="end"
+                android:gravity="left|center_vertical"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textColor="@color/trip_info_text"
                 android:textSize="16dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="@string/total_price_label" />
 
             <TextView
                 android:id="@+id/taxes_fees_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/includes_taxes_and_fees"
+                android:layout_gravity="center_vertical"
+                android:drawableRight="@drawable/ic_info_small"
+                android:ellipsize="end"
+                android:gravity="left|center_vertical"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textColor="@color/trip_info_text"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:text="@string/includes_taxes_and_fees" />
+
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/info_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/price_description_container"
-            android:paddingBottom="10dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="4dp"
-            android:paddingTop="10dp"
-            android:scaleType="center"
-            android:src="@drawable/ic_info_small" />
+        <Space
+            android:layout_width="4dp"
+            android:layout_height="match_parent" />
 
         <com.mobiata.android.widget.AutoResizeTextView
             android:id="@+id/trip_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/info_btn"
+            android:layout_gravity="center_vertical"
             android:ellipsize="none"
             android:gravity="right"
             android:singleLine="true"
             android:textColor="@color/trip_info_text"
             android:textSize="21dp"
             android:textStyle="bold"
-            mobiata:minTextSize="10dp" />
-    </RelativeLayout>
+            app:minTextSize="10dp" />
+    </LinearLayout>
 
 </com.expedia.bookings.section.SectionFlightTrip>
