--- a/project/src/main/res/layout/lx_search_params_presenter.xml
+++ b/project/src/main/res/layout/lx_search_params_presenter.xml
@@ -28,8 +28,8 @@
 
                 <ImageView
                     android:layout_width="55dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_height="50dp"
+                    android:scaleType="center"
                     android:src="@drawable/location"
                     android:tint="#FFFFFF" />
 
