--- a/project/src/lastMinute/res/values/donottranslate.xml
+++ b/project/src/lastMinute/res/values/donottranslate.xml
@@ -5,7 +5,7 @@
     <!-- Email addresses -->
     <string name="email_app_support">lastminute-android@mobiata.com</string>
     <!-- User name label for support email sent to user happiness team -->
-    <string name="email_user_name_lastminute">LastMinute user name:</string>
+    <string name="email_user_name_lastminute">lastminute.com.au user name:</string>
     <!-- App Support URL -->
     <string name="app_support_url_lastminute">http://www.mobiata.com/support/lastminute/android</string>
 </resources>
