--- a/project/src/lastMinute/res/values/themes.xml
+++ b/project/src/lastMinute/res/values/themes.xml
@@ -265,7 +265,7 @@
     </style>
 
     <style name="TerminalMapTheme" parent="@android:style/Theme.Holo">
-        <!--<item name="android:logo">@drawable/ic_stat_lm</item>--><!-- Todo needs to be updated-->
+        <item name="android:logo">@drawable/ic_stat_lm</item>
         <item name="android:actionBarStyle">@style/TerminalMapActionBar</item>
         <item name="android:actionOverflowButtonStyle">@style/Widget.ActionBar.ActionButton.Overflow</item>
         <item name="android:windowBackground">@android:color/white</item>
