--- a/project/src/lastMinute/res/values/donottranslate.xml
+++ b/project/src/lastMinute/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">LastMinute</string>
+    <string name="app_name">lastminute.com.au</string>
 
     <!-- Email addresses -->
     <string name="email_app_support">lastminute-android@mobiata.com</string>
