--- a/project/src/main/res/layout/widget_lx_rules.xml
+++ b/project/src/main/res/layout/widget_lx_rules.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/lx_rules_toolbar"
@@ -21,36 +21,46 @@
         <com.expedia.bookings.widget.TextView
             android:id="@+id/rules_and_restrictions"
             style="@style/LegalInformationHeader"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:text="@string/rules_and_restrictions" />
+
         <View style="@style/LegalInformationDivider.Grey" />
 
         <!-- Terms & Conditions -->
         <com.expedia.bookings.widget.TextView
             android:id="@+id/terms_and_conditions"
             style="@style/LegalInformationHeader"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:text="@string/terms_and_conditions" />
+
         <View style="@style/LegalInformationDivider.Grey" />
 
         <!-- Privacy Policy -->
         <com.expedia.bookings.widget.TextView
             android:id="@+id/privacy_policy"
             style="@style/LegalInformationHeader"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:text="@string/privacy_policy" />
+
         <View style="@style/LegalInformationDivider.Grey" />
 
         <!-- Cancellation Policy -->
         <com.expedia.bookings.widget.TextView
             android:id="@+id/cancellation_policy_header_text_view"
             style="@style/LegalInformationTextView.Blue"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:text="@string/cancellation_policy"
-            android:textAllCaps="true"
-            />
-        <View
-            android:id="@+id/cancellation_policy_divider"
-            style="@style/LegalInformationDivider.Blue" />
+            android:textAllCaps="true" />
+
         <com.expedia.bookings.widget.TextView
             android:id="@+id/cancellation_policy_text_view"
-            style="@style/LegalInformationTextView" />
+            style="@style/LegalInformationTextView"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp" />
 
     </LinearLayout>
 
