--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/hotel_room_list_container_margin"
         android:layout_marginRight="@dimen/hotel_room_list_container_margin"
+        android:layout_marginBottom="9dp"
         android:animateLayoutChanges="true"
         android:orientation="vertical">
 
@@ -165,4 +166,4 @@
         android:layout_marginTop="10dp"
         android:background="@color/divider_grey" />
 
-</RelativeLayout>
+</merge>
