--- a/project/src/travelocity/res/layout/fragment_phone_launch.xml
+++ b/project/src/travelocity/res/layout/fragment_phone_launch.xml
@@ -81,38 +81,39 @@
 
             <TextView
                 android:id="@+id/tvly_flights"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/btn_tvly_flights"
                 android:gravity="center"
-                android:paddingRight="20dp"
                 android:text="@string/nav_flights"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/tvly_hotels"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/btn_tvly_hotels"
                 android:gravity="center"
-                android:paddingRight="20dp"
                 android:text="@string/nav_hotels"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/tvly_cars"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/btn_tvly_car"
                 android:gravity="center"
-                android:paddingRight="20dp"
                 android:text="@string/nav_cars"
                 android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/tvly_activities"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/btn_tvly_lx"
                 android:gravity="center"
                 android:text="@string/nav_lx"
