--- a/project/src/main/res/layout/hotel_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/hotel_checkout_summary_widget.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.HotelCheckoutSummaryWidget xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,35 +12,31 @@
         android:id="@+id/hotel_booking_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/spacing_view">
+        android:layout_below="@+id/spacing_view"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/selected_room"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Standard Room, 1 King Bed"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
             android:id="@+id/selected_bed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="1 King Bed"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
             android:id="@+id/number_nights"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="2 Nights"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
             android:id="@+id/number_guests"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="4 Guests"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
@@ -52,7 +46,6 @@
             android:drawableLeft="@drawable/check"
             android:drawablePadding="8dp"
             android:paddingLeft="14dp"
-            android:text="Free Cancellation"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
@@ -62,7 +55,6 @@
             android:drawableLeft="@drawable/check"
             android:drawablePadding="8dp"
             android:paddingLeft="14dp"
-            android:text="Sale"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
@@ -72,15 +64,14 @@
             android:drawableLeft="@drawable/check"
             android:drawablePadding="8dp"
             android:paddingLeft="14dp"
-            android:text="Best Price Guarantee"
             android:textColor="@color/cars_actionbar_text_color" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/hotel_booking_summary">
+        android:layout_below="@+id/hotel_booking_summary"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -90,52 +81,46 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total with Tax"
                 android:textColor="@color/cars_actionbar_text_color" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fees"
                 android:textColor="@color/cars_actionbar_text_color" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Due to Expedia"
                 android:textColor="@color/cars_actionbar_text_color" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="$900m"
                 android:textColor="@color/cars_actionbar_text_color" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="$80k"
                 android:textColor="@color/cars_actionbar_text_color" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="$900m + 80k"
                 android:textColor="@color/cars_actionbar_text_color" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-</com.expedia.bookings.widget.HotelCheckoutSummaryWidget>
+</merge>
