--- a/project/src/main/res/layout/widget_hotel_summary_header.xml
+++ b/project/src/main/res/layout/widget_hotel_summary_header.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="?attr/actionBarSize"
     android:layout_marginLeft="9dp"
     android:layout_marginRight="9dp"
-    android:layout_marginTop="9dp" >
+    android:layout_marginTop="9dp"
+    android:paddingTop="?attr/actionBarSize" >
 
     <ImageView
         android:id="@+id/hotel_room_background"
@@ -21,26 +21,22 @@
         <TextView
             android:id="@+id/hotel_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="The Ritz-Carleton San Francisco" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/check_in_out_dates"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Jan 23 - Jan 25" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/address_line_one"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="323 Market St" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/address_city_state"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="San Francisco, CA" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </FrameLayout>
