--- a/project/src/main/res/layout/widget_hotel_results.xml
+++ b/project/src/main/res/layout/widget_hotel_results.xml
@@ -38,4 +38,22 @@
             android:layout_height="90dp" />
     </LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/map_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/fab_map" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/list_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="106dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/fab_list" />
+
 </merge>
