--- a/project/src/wotif/res/layout/wotif_section_phone_launch_lob.xml
+++ b/project/src/wotif/res/layout/wotif_section_phone_launch_lob.xml
@@ -26,7 +26,7 @@
             android:layout_height="@dimen/launch_lob_height"
             android:background="@color/launch_lob_bg" />
 
-        <com.expedia.bookings.widget.LinearLayout
+        <LinearLayout
             android:id="@+id/lob_btn_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 app:btn_icon="@drawable/lob_flight"
                 app:btn_text="@string/nav_flights" />
 
-        </com.expedia.bookings.widget.LinearLayout>
+        </LinearLayout>
     </FrameLayout>
 
     <LinearLayout
